@@ -75,6 +75,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix minor memory leak when clearing runaway jobs.
  -- Avoid flooding slurmctld and logging when prolog complete RPC errors occur.
  -- Fix slurmctld node_scheduler's feature_bitmap memory leak.
+ -- Fatal when reading config if Alloc flag configured on FrontEnd mode.
 
 * Changes in Slurm 19.05.0rc1
 =============================
